--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
             Your browser does not support the video tag.
         </video>
     </div>
+        <div class="video-mobile">
+ <video autoplay muted loop playsinline>
+            <source src="assets/videos/video-mobile.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+   
+        </div>
 <div class="scroll-down">
     <span></span>
 </div>
@@ -204,5 +211,6 @@
 </script>
 
 </body>
+
 
 </html>
